<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/texts_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:hint="@string/hint_name"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@android:color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_phone"
        android:hint="@string/hint_phone"
        android:inputType="number"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@android:color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_address"
        android:hint="Address"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_details"
        android:text="@string/button_details"
        android:layout_gravity="center"
        android:background="@drawable/oval_button" />

</LinearLayout>